pks-cafe/cafe-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress
metadata:
  name: cafe-ingress
spec:
  rules:
  - host: cafe.corp.local
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee
          servicePort: 80
